:bug: Bug overflow cards

--- a/src/styles/objects.scss
+++ b/src/styles/objects.scss
@@ -24,7 +24,7 @@
     gap: 32px 0;
 
     @include tools.desktop {
-        grid-template-columns: repeat(3,1fr);
+        grid-template-columns: repeat(3,minmax(100px, 1fr));
         grid-auto-rows: 560px minmax(430px,auto);
         gap: 80px 24px;
     }
